# cpp_less_med01

./: .gitignore  CMakeLists.txt  lib.cpp  lib.h  main.cpp  test_version.cpp  zmyinfo.txt
.github/workflows/: release.yml
